src/Comp/ColorPicker/ColorRangeGroup.styles.scss
.range-group {
    display: flex;
    flex-direction: column;
    width: 250px;
    height: 53px;

    .top-portion {
        display: flex;
        justify-content: space-between;
        align-items: center;

        label {
            font-size: 13px;
        }

        .input-number {
            width: 80px;
            display: flex;

            input {
                border-right: none !important;
                width: 40px;
                text-align: center;
                font-size: 12px;
                height: 23px;
                padding: 0;
                border-radius: 7px 0 0 7px;
                border: 1px solid #d3dce6
            }

            input:hover {
                border-color: #b2c2d4;
            }

            input:focus {
                outline: none !important;
                border: 1px solid rgb(35, 173, 240);
            }

            .minus {
                border: 1px solid #d3dce6;
                border-right: none !important;
                cursor: pointer;
                width: 20px;
                height: 23px
            }

            .minus:hover {
                border: 1px double #b9c7d7;
            }

            .plus {
                border-radius: 0 7px 7px 0;
                border: 1px solid #d3dce6;
                cursor: pointer;
                width: 20px;
                height: 23px
            }

            .plus:hover {
                border: 1px double #b9c7d7;
            }
        }

        .input-number input:focus+.minus {
            border-left: 1px double rgb(35, 173, 240);
        }

        .input-number input:hover+.minus {
            border-left: 1px double #b9c7d7;
        }

        .input-number .minus:hover+.plus {
            border-left: 1px double #b9c7d7;
        }
    }

    .range {
        margin: auto;
    }

    .range:focus {
        outline: none;
    }

}

